Fix #6586: Add close modal icon to report dialog (#6591)

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -4117,6 +4117,11 @@ a.status-card {
 
 .report-modal__target {
   padding: 20px;
+
+  .media-modal__close {
+    top: 19px;
+    right: 15px;
+  }
 }
 
 .loading-bar {
