When enabled, always display media in gallery. Also: click to reveal (#6692)
Fix #6677

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -4680,7 +4680,7 @@ a.status-card {
     background-size: cover;
     background-position: center;
     position: absolute;
-    color: inherit;
+    color: $ui-primary-color;
     text-decoration: none;
     border-radius: 4px;
 
@@ -4688,6 +4688,7 @@ a.status-card {
     &:active,
     &:focus {
       outline: 0;
+      color: $ui-secondary-color;
 
       &::before {
         content: "";
@@ -4698,6 +4699,14 @@ a.status-card {
         border-radius: 4px;
       }
     }
+  }
+
+  &__icons {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 24px;
   }
 }
 
