--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -3422,8 +3422,12 @@ a.status-card {
   img,
   canvas,
   video {
-    max-width: 100vw;
-    max-height: 100vh;
+    max-width: 100%;
+    /*
+    put margins on top and bottom of image to avoid the screen coverd by
+    image.
+     */
+    max-height: 80%;
     width: auto;
     height: auto;
     margin: auto;
@@ -3434,11 +3438,6 @@ a.status-card {
     display: block;
     background: url('../images/void.png') repeat;
     object-fit: contain;
-  }
-
-  .react-swipeable-view-container {
-    width: 100vw;
-    height: 100%;
   }
 }
 
